Changes: 1.	Fixed a layout error where the same sentences on different lines are not 	aligned causing the word layout to be all wrong.
2.	Updated the resume css file to use auto generated columns for the CSS grid
	to make everything fit more naturally together.

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -16,8 +16,8 @@ a, a:link, a:visited, a:hover, a:active {
 
 .grid-container {
 	display: grid;
-	grid-template-columns:
-	1fr 4fr 1fr;
+	grid-template-columns: repeat(3, auto);
+	/* 1fr 4fr 1fr; */
 	grid-template-rows: repeat(8, auto);
 	grid-template-areas:
 		". title ."
@@ -103,10 +103,3 @@ img {
 		"footer";
 	}
 }
-
-/* 
-background:
-	linear-gradient(140deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 43%, transparent 44%, transparent 100%),
-	linear-gradient(105deg, transparent 0%, transparent 40%, rgba(0, 0, 0, 0.06) 41%, rgba(0, 0, 0, 0.07) 76%, transparent 77%, transparent 100%),
-	linear-gradient(to right, #d89ca4, #e27b7e);
-	background-color: #de7e85; */
